<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_movies"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

   <ProgressBar
       android:layout_gravity="center"
       android:id="@+id/pgMovieFragment"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

</FrameLayout>